[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Pause.gd" type="Script" id=1]
[ext_resource path="res://Assets/pause_bg.jpg" type="Texture" id=2]
[ext_resource path="res://Assets/Squared Display.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 3
outline_color = Color( 0.92549, 0.584314, 0.376471, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 3
outline_color = Color( 0.92549, 0.584314, 0.376471, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 70
outline_size = 3
outline_color = Color( 0.780392, 0.427451, 0.427451, 1 )
font_data = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.470588 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -89.0
margin_right = 118.0
margin_bottom = -17.0
custom_fonts/font = SubResource( 1 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -121.0
margin_top = 3.0
margin_right = 121.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 1 )
text = "fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back_to_main_menu" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = 95.0
margin_right = 231.0
margin_bottom = 167.0
custom_fonts/font = SubResource( 2 )
text = "Back to main menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Paused" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -105.0
margin_top = 5.0
margin_right = 105.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 3 )
text = "Paused"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="Back_to_main_menu" to="." method="_on_Back_to_main_menu_pressed"]
